Fix rendering bug and hide overflow-x

--- a/normalize.css
+++ b/normalize.css
@@ -18,7 +18,7 @@ body {
 
 .background {
   width: 100%;
-  margin: 0 auto;
+  margin: 0;
   overflow: hidden;
 }
 
