--- a/scroll-container-style.css
+++ b/scroll-container-style.css
@@ -6,29 +6,28 @@
   box-sizing: border-box;
   border-radius: 25px;
   padding: 0 40px;
-  position: relative;
-  -ms-overflow-style: none; /* Per IE ed Edge */
-  scrollbar-width: none; /* Per Firefox */
-  &::-webkit-scrollbar {
-    /* Per Chrome, Safari, Opera */
-    display: none;
-  }
+  position: relative; /* Posiziona le frecce in modo assoluto *** */
+  overflow-x: auto; /* Permette lo scroll orizzontale */
 }
 
 /* Wrapper delle card */
 .cards-wrapper {
   display: flex;
   border-radius: 25px;
-  overflow-x: scroll; /* <-- ESSENZIALE per lo scorrimento orizzontale */
+  overflow-x: scroll; /* Scorrimento orizzontale */
   overflow-y: hidden;
-  scroll-snap-type: x mandatory; /* Aggiungi scroll-snap per l'effetto "una card per volta" */
+  scroll-snap-type: x mandatory; /* Effetto una card per volta */
   scroll-behavior: smooth;
   -webkit-overflow-scrolling: touch;
   gap: 0; /* Nessun gap tra le card */
   padding-bottom: 0;
   flex-grow: 1; /* Occupare lo spazio rimanente nel flex container */
   height: 80vh;
-  box-shadow: 0 4px 6px var(--shadow-color);
+  box-shadow: 0 4px 8px var(--shadow-color);
+}
+
+.cards-wrapper::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
 }
 
 .card {
@@ -38,7 +37,6 @@
 
 /* Stili per le frecce di scorrimento */
 .scroll-button {
-  margin-bottom: 2rem;
   background-color: var(--main-color);
   color: white;
   border: none;
@@ -46,35 +44,34 @@
   width: 30px;
   height: 30px;
   opacity: 1;
-  transition: opacity 0.3s ease;
   display: flex;
   justify-content: center;
   align-items: center;
   cursor: pointer;
   font-size: 1rem;
   transition: opacity 0.3s ease;
+  z-index: 10;
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
 }
 
-.left-arrow {
-  left: 0;
-}
-.right-arrow {
-  right: 0;
-}
-
 .scroll-button:disabled {
-  opacity: 0.3;
+  opacity: 0.3; /* Meno visibile quando disabilitato */
   cursor: default;
-  pointer-events: none;
+  pointer-events: none; /* Non cliccabile quando disabilitato */
 }
 
 .scroll-button:hover {
   background-color: rgba(0, 0, 0, 0.4);
 }
+.left-arrow {
+  left: 0;
+}
 
+.right-arrow {
+  right: 0;
+}
 /* Responsive */
 @media and (max-width: 768px) {
   .cards-wrapper {
